Finished smooth scroll, fixed scroll problem on safari , adjusted mobile navigation functionality

--- a/css/general.css
+++ b/css/general.css
@@ -48,6 +48,7 @@ default:9px,11px
 html {
   font-size: 62.5%;
   overflow-x: hidden;
+  scroll-behavior: smooth;
 }
 body {
   font-family: "Rubik", sans-serif;
